fixed laggy startup of computeAll Dialog